k8s/debit-service/peerAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: debit-backend
spec:
  selector:
    matchLabels:
      app: debitservice
  mtls:
    mode: STRICT
---
