k8s/debit-service/request-authentication-crd.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: debit-auth
spec:
  selector:
    matchLabels:
      app: debitservice
  jwtRules:
  - issuer: https://keycloak-sso.apps.rhcasalab.sandbox1385.opentlc.com/auth/realms/user-applications
    jwksUri: https://keycloak-sso.apps.rhcasalab.sandbox1385.opentlc.com/auth/realms/user-applications/protocol/openid-connect/certs
