k8s/debit-service/deploymentConfig.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"postgresql-debit-demo"}]'
  labels:
    app: debitservice
    app.kubernetes.io/component:  debitservice-dc
    app.kubernetes.io/instance: backend
    app.kubernetes.io/part-of: debit-app
    app.openshift.io/runtime: spring-boot
    deploymentconfig: debitservice-v1
    version: v1
  name: debitservice-v1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  test: false
  selector:
    name: debitservice
    app: debitservice
    version: v1
    deploymentconfig: debitservice-v1
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 3600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  template:
    metadata:
      name: debitservice
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: debitservice
        app: debitservice
        deploymentconfig: debitservice-v1
        version: v1
    spec:
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: spring-boot
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            privileged: false
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: prometheus
              containerPort: 9779
              protocol: TCP
            - name: jolokia
              containerPort: 8778
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/uc1-zonea/debitservice:latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - spring-boot
        from:
          kind: ImageStreamTag
          namespace: uc1-zonea
          name: 'debitservice:latest'
