k8s/debit-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debitservice
  labels:
    app: debitservice    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: debitservice
