k8s/debit-service/authorization-policy-crd.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: debit-app
spec:
  selector:
    matchLabels:
      app: debitservice
  action: ALLOW
  rules:
  - to:
    - operation:
        methods : ["GET"]
        paths: ["/*"]
    - operation:
        methods: ["POST"]
        paths: ["/rest/debit"]
    when:
    - key: request.auth.claims[realm_access][roles]
      values: ["debit-user"]
